optimize package structure and refactor code